# SimpleMediaServer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
example/config/: general.yml  libraries.yml  users.yml
example/example-library/: README.txt
src/: config.rs  main.rs  utils.rs
src/media_manipulation/: frame_scaler.rs  image_utils.rs  media_utils.rs  mod.rs  thumbnail.rs  thumbnail_sheet.rs  transcription.rs
src/media_manipulation/backends/: intel_quick_sync.rs  mod.rs  software.rs  video_toolbox.rs
src/media_manipulation/media_utils/: frame_scaler.rs  hardware_device.rs  in_memory_muxer.rs  mod.rs  resource_pool.rs
src/media_manipulation/transcoding/: audio.rs  mod.rs  subtitle.rs  video.rs
src/media_manipulation/transcription/: decoding.rs  mod.rs  web_vtt.rs
src/media_manipulation/utils/: hardware_device.rs  in_memory_muxer.rs  mod.rs
src/services/: artifact_cache.rs  hls_segment_service.rs  mod.rs  thumbnail_service.rs  thumbnail_sheet_service.rs
src/transcoding/: image_utils.rs  mod.rs
src/transcoding/backends/: mod.rs  software.rs  video_toolbox.rs
src/web_server/: api_error.rs  api_types.rs  auth.rs  libraries.rs  media_backend_factory.rs  media_connections.rs  media_metadata.rs  metadata_cache.rs  mod.rs  router.rs  server_state.rs  state.rs  video_locator.rs  video_metadata.rs  watch_history.rs  web_utils.rs
src/web_server/api_routes/: api_types.rs  delete_watch_progress.rs  error.rs  file_info.rs  get_auto_subtitle_segment.rs  get_subtitles.rs  get_user.rs  get_watch_history.rs  hls_level_manifest.rs  hls_manifest.rs  hls_segment.rs  list_dir.rs  list_libraries.rs  login.rs  logout.rs  mod.rs  native_video.rs  thumbnail.rs  thumbnail_sheet.rs  update_watch_progress.rs
src/web_server/services/: artifact_cache.rs  hls_segment_service.rs  mod.rs  scaled_thumbnail_service.rs  subtitle_service.rs  task_pool.rs  thumbnail_service.rs  thumbnail_sheet_service.rs  transcription_service.rs
web-ui/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web-ui/src/: app.d.ts  app.html
web-ui/src/lib/: api_types.ts  format_text.ts  utils.ts
web-ui/src/lib/components/: DimStripe.svelte  Dropdown.svelte  FeatherIcon.svelte  FormattedText.svelte  MultiLineText.svelte  PageSection.svelte  SVGIcon.svelte  SearchBar.svelte  SelectionDropdown.svelte  input_styles.scss
web-ui/src/lib/components/tile_grid/: BaseTile.svelte  DirectoryTile.svelte  GridSection.svelte  TileGrid.svelte  VideoTile.svelte
web-ui/src/lib/components/video_player/: Bar.svelte  ConnectionPiP.svelte  PreviewThumbnail.svelte  Spinner.svelte  Timeline.svelte  VideoElement.svelte  VideoFilters.svelte  VideoPlayer.svelte  VideoPlayerInternal.svelte  filters.ts  player.scss  subtitle_controls.ts  video_backend.ts  video_utils.ts
web-ui/src/lib/components/video_player/buttons/: Button.svelte  CCButton.svelte  ConnectionsButton.svelte  ConnectionsMenuButton.svelte  ConnectionsPiPButton.svelte  FollowConnectionButton.svelte  FullscreenButton.svelte  PlayPauseButton.svelte  SettingsButton.svelte  SkipButton.svelte
web-ui/src/lib/components/video_player/menus/: ConnectionsMenu.svelte  SettingsMenu.svelte  SidebarMenu.svelte
web-ui/src/lib/css/: fonts.css  global.scss  theme.scss
web-ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
web-ui/src/routes/(app)/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
web-ui/src/routes/(app)/watch_history/: +page.svelte  +page.ts  EntryDeleteButton.svelte  HistoryTile.svelte
web-ui/src/routes/files/[library_id]/[...path]/: +page.svelte  +page.ts  DirectoryPage.svelte  FilePage.svelte
web-ui/src/routes/login/: +page.svelte
web-ui/static/: login.html  manifest.json  site.webmanifest
(+7 files in other folders)
