[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
hyper = { version = "1.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower-service = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
http = "1.0"
http-body-util = "0.1"
headers = "0.4"
bytes = "1.0"
mime = "0.3"
mime_guess = "2.0"
anyhow = "1.0"
argh = "0.1"
ffmpeg-next = "7.0"
ffmpeg-sys-next = "7.0"
image = { version = "^0.24", default-features = false }
turbojpeg = { version = "1.0", features = ["image"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
blake3 = "1.0"
rand = "0.8"
rand_chacha = "0.3"
natord = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
percent-encoding = "2.3.1"
